--- a/cms/settings/settings.ini
+++ b/cms/settings/settings.ini
@@ -27,8 +27,8 @@ ln = PROPERTY_101
 wd = PROPERTY_105
 hg = PROPERTY_103
 weight = PROPERTY_107
-store_id = 0
-store_password = ""
+store_id = 10124
+store_password = t6SrAgqgtv831QmaP1oBhrEidqXA6L2T
 
 source_id = 20
 lead_prefix = [НД]
